2004-08-05  Glenn Randers-Pehrson <glennrp@glennrp.com>

	* coders/png.c: Fixes for CERT security alert TA04-217A described
	at "http://www.us-cert.gov/cas/techalerts/TA04-217A.html".

2004-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* ltmain.sh: Fix to allow exe wrapper to work under MinGW.

2004-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdf.c (ReadPDFImage): Double-check that Ghostscript
	produced an output file since sometimes it reports success after
	it has spewed an error message and has produced no output.

2004-04-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/compress.c (HuffmanEncodeImage): Avoid out of bounds
	array access.

2004-04-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh (PACKAGE_RELEASE_DATE): Release 1.0.6 in order to
	capture the remaining fixes on the 1.0 branch.
	* coders/wmf.c (ipa_device_begin): Resolve WMF rendering bug with
	black color.
	* configure.ac: Update tests for FreeType headers since they
	started to fail with the latest FreeType.
	* magick/delegate.c (ListDelegateInfo): Ensure that loop
	terminates if fprintf returns zero.

2004-03-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/annotate.c: Use new-style FreeType inclusion.
	* magick/nt_base.c (NTSystemComman): Have not been successful with using
	MsgWaitForMultipleObjects() reliably, so back out usage of it for
	now.

2004-03-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/tempfile.c (ComposeTemporaryFileName): The full range of
	safe characters was not being used, thereby limiting the number of
	unique temporary file names available.

2004-03-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c (CompositeImage): Fix Multiply composite
	operator for Q:32 build (was all black image).
	* magick/image.h (RoundToQuantum): Added macro to round double to
	Quantum.

2004-03-10  Peter Boos  <pedib@colorfullife.com>
